--- a/sass/main.scss
+++ b/sass/main.scss
@@ -189,3 +189,63 @@ nav {
     justify-content: center;
     padding-left: 10px;
 }
+
+.text-section {
+    min-height: 100vh;
+    width: 100%;
+    padding: remCalc(93.416px) remCalc(32px);
+
+    &>&__inner {
+        background-color: $pink-light;
+        height: 100%;
+        width: 100%;
+        padding: remCalc(81.834px);
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+        gap: remCalc(45px);
+        border-bottom-left-radius: remCalc(81.8362px);
+        border-bottom-right-radius: remCalc(81.8362px);
+        border-top-right-radius: remCalc(81.8362px);
+
+
+        &>h2 {
+            color: $pink-dark;
+            font-family: $font-secondary;
+            font-weight: 800;
+            font-size: remCalc(18.4px);
+            text-transform: uppercase;
+        }
+
+        &>p {
+            color: $font-black;
+            font-family: $font-primary;
+            font-weight: 500;
+            font-size: remCalc(44.8px);
+            line-height: 1.1;
+            letter-spacing: remCalc(-1.2px);
+        }
+    }
+}
+
+.highlighter {
+    background-color: $pink-dark;
+    color: $blue-light;
+    padding: 0 4px;
+    font-weight: 550;
+    display: inline-block;
+}
+
+.highlighter--up {
+    transform: rotate(-1.2deg);
+
+}
+
+.highlighter--down {
+    transform: rotate(1.2deg);
+}
+
+.card-trio {
+    >&__heading {}
+}
