till card rotation

--- a/sass/abstracts/_colors.scss
+++ b/sass/abstracts/_colors.scss
@@ -2,6 +2,7 @@ $blue-light: #00ffe6;
 $blue-dark: #003da2;
 $pink-light: #ff8eff;
 $pink-dark: #831672;
+$pink-hot: #ff0580;
 $green-light: #00fa7f;
 $green-mid: #008932;
 $green-dark: #00530d;
