--- a/sass/abstracts/_colors.scss
+++ b/sass/abstracts/_colors.scss
@@ -1,6 +1,7 @@
 $blue-light: #00ffe6;
 $blue-dark: #003da2;
 $pink-light: #ff8eff;
+$pink-text: #ffc7ff;
 $pink-dark: #831672;
 $pink-hot: #ff0580;
 $green-light: #00fa7f;
