--- a/sass/main.scss
+++ b/sass/main.scss
@@ -590,14 +590,15 @@ nav {
 }
 .rounded-box {
     background-color: $pink-dark;
+    border-bottom: 0;
+    position: relative;
+    padding: 2rem;
+    height: remCalc(250px);
     border: 2px solid $blue-light;
     border-bottom: 0;
     border-top-right-radius: 2rem;
     border-top-left-radius: 2rem;
-    position: relative;
-    padding: 2rem;
-    height: remCalc(250px);
-
+    
     >h3 {
         position: absolute;
         top:70;
@@ -621,5 +622,34 @@ nav {
         bottom: 30px;
         right: 80px;
         color: $pink-text;
+    }
+}
+
+.pic-section {
+    width: 100%;
+    padding: 1rem;
+    position: relative;
+    
+    img {
+        width: 100%;
+        height: auto;
+        object-fit: contain;
+    }
+
+    figcaption {
+        background-color: $pink-dark;
+        color: $pink-light;
+        font-family: $font-primary;
+        font-size: remCalc(20px);
+        font-weight: 600;
+        line-height: 1.2;
+        letter-spacing: -0.02em;
+        padding: 1rem;
+        display: inline-block;
+        position: absolute;
+        bottom: 1.23rem;
+        right: 1rem;
+        z-index: 100;
+        border-top-left-radius: 25px;
     }
 }
