--- a/sass/main.scss
+++ b/sass/main.scss
@@ -269,7 +269,7 @@ nav {
 // page 3
 
 .card-trio {
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
     gap: remCalc(5px);
     padding: 0 remCalc(16px);
@@ -367,7 +367,6 @@ nav {
 .people-section {
     padding: 0 1rem;
     padding-bottom: 1rem;
-    background-color: white;
 
     &>&--heading {
         padding: remCalc(45px);
@@ -630,6 +629,7 @@ nav {
     width: 100%;
     padding: 1rem;
     position: relative;
+    background-color: white;
     
     img {
         width: 100%;
@@ -764,3 +764,117 @@ nav {
 
 // in-the-news
 
+.news-section {
+    background-color: white;
+    >h2 {
+    width: 100%;
+    padding: remCalc(45px);
+    font-family: $font-secondary;
+    font-size: remCalc(92.674px);
+    font-weight: 900;
+    letter-spacing: remCalc(-4.50696px);
+    color: $pink-dark;
+    text-align: center;
+    }
+}
+
+.carousel {
+    margin: 100px auto;
+    width: 90%;
+    display: flex;
+    overflow-x: auto;
+
+    &::-webkit-scrollbar {
+        display: none;
+    }
+
+    >.group {
+        @include center;
+        gap: 2rem;
+        animation: spin 20s infinite linear;
+        padding-right: 2rem;
+
+    }    
+}
+.news-card {
+    flex: 0 0 5em;
+    height: remCalc(328px);
+    min-width: remCalc(480px);
+    border-top-left-radius: remCalc(45px);
+    border-bottom-right-radius: remCalc(45px);
+    padding : 3rem;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+
+    &:hover {
+        border-top-left-radius: remCalc(65px);
+    border-bottom-right-radius: remCalc(65px);
+    }
+
+    >.heading {
+        display: flex;
+        gap: 2rem;
+        align-items: center;
+
+        >:first-child {
+            font-family: $font-primary;
+            font-size: remCalc(21.5387px);
+            font-weight: 800;
+            line-height: remCalc(27.6px);
+            letter-spacing: remCalc(-0.368px);
+        }
+        >p:nth-child(2) {
+            font-family: $font-secondary;
+            font-size: remCalc(21.5387px);
+            font-weight: 900;
+            opacity: 0.7;
+            line-height: remCalc(27.6px);
+            letter-spacing: remCalc(-0.368px);
+        }
+    }
+
+    >.content {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        >:first-child {
+            font-family: $font-secondary;
+            font-size: remCalc(24.5387px);
+            font-weight: 900;
+            opacity: 0.7;
+            line-height: remCalc(27.6px);
+            letter-spacing: remCalc(-0.368px);
+        }
+        >p:nth-child(2) {
+            font-family: $font-primary;
+            font-size: remCalc(36.5387px);
+            font-weight: 900;
+            line-height: remCalc(37.6px);
+            letter-spacing: remCalc(-0.668px);
+        }
+    }
+    
+    
+}
+.news-card--pink {
+    background-color: $pink-light;
+    color: $pink-dark;
+}
+.news-card--blue {
+    background-color: $blue-light;
+    color: $blue-dark;
+}
+.news-card--green {
+    background-color: $green-light;
+    color: $green-dark;
+}
+
+@keyframes spin {
+    from {
+        translate: 0;
+    }
+    to {
+        translate: -100%
+    }
+}
