--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,6 +12,15 @@
 
 @use './base/reset';
 
+$breakpoints: (
+  sm: 576px,
+  md: 768px,
+  lg: 1024px,
+  xl: 1280px,
+  xxl: 1440px
+);
+
+
 .wrapper {
     height: fit-content;
     background-color: #eeeeee;
@@ -779,8 +788,8 @@ nav {
 }
 
 .carousel {
-    margin: 100px auto;
-    width: 90%;
+    margin: 10px auto 0;
+    width: 100%;
     display: flex;
     overflow-x: auto;
 
@@ -876,5 +885,108 @@ nav {
     }
     to {
         translate: -100%
+    }
+}
+
+footer {
+    background-color: white;
+    padding-top: 3.5rem;
+    height: fit-content;
+    >img {
+        width:100vw;
+    }
+}
+
+.footer-wrapper {
+    border-top-left-radius: remCalc(65px);
+    border-top-right-radius: remCalc(65px);
+    background-color: $pink-dark;
+    color: $pink-light;
+    padding: remCalc(64px) remCalc(32px);
+    width: 100%;
+
+    .text-wrap {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+        flex-wrap: wrap;
+        gap: remCalc(40px);
+        color: $pink-text;
+
+        .left {
+            display: flex;
+            flex-direction: column;
+            gap: remCalc(20px);
+            
+            h4 {
+                font-family: $font-secondary;
+                font-size: remCalc(32px);
+                font-weight: 900;
+                margin-bottom: remCalc(10px);
+            }
+
+            a {
+                display: inline-block;
+                width: remCalc(40px);
+                height: remCalc(40px);
+                margin-right: remCalc(15px);
+                font-size: remCalc(30px);
+                &:hover {
+                    transform: scale(1.2);
+                    transition: all .5s ease-in-out;
+                }
+                
+            }
+            
+            p {
+                &:hover {
+                    color: $blue-light;
+                }
+                font-family: $font-primary;
+                font-size: remCalc(20px);
+                font-weight: 600;
+                opacity: 0.8;
+            }
+        }
+
+        .right {
+            max-width: remCalc(600px);
+            
+            p {
+                font-family: $font-primary;
+                font-size: remCalc(18px);
+                line-height: 1.5;
+            }
+        }
+    }
+
+    .text-bottom {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding-top: 2rem;
+        color: $pink-text;
+        opacity: 0.8    ;
+
+        p {
+            font-family: $font-primary;
+            font-size: remCalc(16px);
+            opacity: 0.8;
+        }
+
+        .links {
+            display: flex;
+            gap: remCalc(50px);
+
+            a {
+                font-family: $font-primary;
+                font-size: remCalc(16px);
+                font-weight: 700;
+                
+                &:hover {
+                    color: $blue-light;
+                }
+            }
+        }
     }
 }
