--- a/sass/abstracts/_colors.scss
+++ b/sass/abstracts/_colors.scss
@@ -9,4 +9,4 @@ $green-mid: #008932;
 $green-dark: #00530d;
 $white: #ffffff;
 $btn-color: #ffc7ff;
-$font-black: color(srgb 0 0 0 / 0.99);
+$font-black: #000
