--- a/sass/pages/_footer.scss
+++ b/sass/pages/_footer.scss
@@ -1,13 +1,12 @@
 @use '../abstracts/functions' as *;
 @use '../abstracts/variables' as *;
 @use '../abstracts/colors' as *;
+@use '../abstracts/mixins' as *;
 
 footer {
     background-color: white;
     padding-top: 3.5rem;
-    >img {
-        width:100vw;
-    }
+    position: relative;
 }
 
 .footer-wrapper {
@@ -101,4 +100,47 @@ footer {
             }
         }
     }
+}
+
+.footer-bottom {
+  position: relative;
+  width: 100%;
+  background-color: $pink-dark;
+  padding-bottom: 100px;
+
+  &__heading{
+    font-weight: 700;
+    font-family: $font-primary;
+    font-size: 18rem;
+    color: $blue-light;
+    background-color: $pink-dark;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 40px 0;
+    letter-spacing: -0.02em;
+  }
+}
+
+.footer-yellow{
+  width: 100%;
+  height: 100px;
+  background-color: #fcdc4d;
+  border-top-left-radius: 100%;
+  border-top-right-radius: 100%;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  z-index: 1;
+  @include center;
+
+  &__text{
+    font-family: $font-secondary;
+    padding: 20px;
+    font-size: remCalc(40px);
+    font-weight: 700;
+    color: $pink-hot;
+  }
 }
