--- a/sass/pages/_header.scss
+++ b/sass/pages/_header.scss
@@ -1,7 +1,7 @@
 @use '../abstracts/variables' as *;
 
 header {
-    width: 100vw;
+    width: 100%;
     height: 0;
     background-color: transparent;
     position: sticky;
