--- a/sass/pages/_hero.scss
+++ b/sass/pages/_hero.scss
@@ -82,6 +82,8 @@
     @include center;
 }
 
+// reference from https://dev.to/ljcdev/hamburger-css-no-js-2dfa
+
 .menu {
     position: fixed;
     z-index: 1000;
